# pyspark-antipattern

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_sample.py
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  fix_documentation.yml  new_rule.yml
.github/workflows/: bump-version.yml  commit-lint.yml  docs.yml  release.yml  rule-consistency.yml
cli/: index.html
configuration/: index.html
contributing/adding-a-rule/: index.html
contributing/commit-messages/: index.html
contributing/versioning/: index.html
docs/: cli.md  configuration.md  index.md  installation.md
docs/contributing/: adding-a-rule.md  commit-messages.md  versioning.md
docs/rules/: index.md
docs/rules/arr/: ARR001.md  ARR002.md  ARR003.md  ARR004.md  ARR005.md  ARR006.md  index.md
docs/rules/driver/: D001.md  D002.md  D003.md  D004.md  D005.md  D006.md  D007.md  D008.md  D009.md  index.md
docs/rules/format/: F001.md  F002.md  F003.md  F004.md  F005.md  F006.md  F007.md  F008.md  F009.md  F010.md  F011.md  F012.md  F013.md  F014.md  F015.md  F016.md  F017.md  F018.md  F019.md  F020.md  index.md
docs/rules/looping/: L001.md  L002.md  L003.md  index.md
docs/rules/pandas/: P001.md  index.md
docs/rules/performance/: PERF001.md  PERF002.md  PERF003.md  PERF004.md  PERF005.md  PERF006.md  PERF007.md  PERF008.md  index.md
docs/rules/shuffle/: S001.md  S002.md  S003.md  S004.md  S005.md  S006.md  S007.md  S008.md  S009.md  S010.md  S011.md  S012.md  S013.md  S014.md  S015.md  S016.md  index.md
docs/rules/udf/: U001.md  U002.md  U003.md  U004.md  U005.md  U006.md  U007.md  index.md
docs/settings/: distinct_threshold.md  exclude_dirs.md  explode_threshold.md  failing_rules.md  ignore.md  ignore_rules.md  index.md  loop_threshold.md  max_shuffle_operations.md  noqa.md  pyspark_version.md  select.md  severity.md  show_best_practice.md  show_information.md  warn.md  warning_rules.md
installation/: index.html
rules/: index.html
rules/arr/: ARR001.md  ARR002.md  index.html
rules/arr/ARR001/: index.html
rules/arr/ARR002/: index.html
rules/arr/ARR003/: index.html
rules/arr/ARR004/: index.html
rules/arr/ARR005/: index.html
rules/arr/ARR006/: index.html
rules/driver/: D001.md  D002.md  D003.md  D004.md  D005.md  D006.md  D007.md  D008.md  index.html
rules/driver/D001/: index.html
rules/driver/D002/: index.html
rules/driver/D003/: index.html
rules/driver/D004/: index.html
rules/driver/D005/: index.html
rules/driver/D006/: index.html
rules/driver/D007/: index.html
rules/driver/D008/: index.html
rules/driver/D009/: index.html
rules/format/: F001.md  F002.md  F003.md  F004.md  F005.md  F006.md  F007.md  F008.md  F009.md  F010.md  F012.md  F013.md  F015.md  F016.md  index.html
rules/format/F001/: index.html
rules/format/F002/: index.html
rules/format/F003/: index.html
rules/format/F004/: index.html
rules/format/F005/: index.html
rules/format/F006/: index.html
rules/format/F007/: index.html
rules/format/F008/: index.html
rules/format/F009/: index.html
rules/format/F010/: index.html
rules/format/F011/: index.html
rules/format/F012/: index.html
rules/format/F013/: index.html
rules/format/F014/: index.html
rules/format/F015/: index.html
rules/format/F016/: index.html
rules/format/F017/: index.html
rules/format/F018/: index.html
rules/format/F019/: index.html
rules/format/F020/: index.html
rules/looping/: L001.md  L002.md  L003.md  index.html
rules/looping/L001/: index.html
rules/looping/L002/: index.html
rules/looping/L003/: index.html
rules/pandas/: P001.md  index.html
rules/pandas/P001/: index.html
rules/performance/: PERF002.md  index.html
rules/performance/PERF001/: index.html
rules/performance/PERF002/: index.html
rules/performance/PERF003/: index.html
rules/performance/PERF004/: index.html
rules/performance/PERF005/: index.html
rules/performance/PERF006/: index.html
rules/performance/PERF007/: index.html
rules/performance/PERF008/: index.html
rules/shuffle/: S001.md  S002.md  S003.md  S004.md  S005.md  S006.md  S007.md  S008.md  S009.md  S010.md  S011.md  S012.md  S013.md  index.html
rules/shuffle/S001/: index.html
rules/shuffle/S002/: index.html
rules/shuffle/S003/: index.html
rules/shuffle/S004/: index.html
rules/shuffle/S005/: index.html
rules/shuffle/S006/: index.html
rules/shuffle/S007/: index.html
rules/shuffle/S008/: index.html
rules/shuffle/S009/: index.html
rules/shuffle/S010/: index.html
rules/shuffle/S011/: index.html
rules/shuffle/S012/: index.html
rules/udf/: U001.md  U002.md  U003.md  index.html
samples/: arr_array.py  d_driver.py  f_format.py  l_loop.py  p_pandas.py  perf_performance.py  s_shuffle.py  test_caching_v1.py  test_sample.py  too_much_distinct.py  u_udf.py
scripts/: check_rule_consistency.py
search/: search_index.json
settings/: index.html
settings/distinct_threshold/: index.html
settings/exclude_dirs/: index.html
settings/explode_threshold/: index.html
settings/failing_rules/: index.html
settings/ignore/: index.html
settings/ignore_rules/: index.html
settings/loop_threshold/: index.html
settings/max_shuffle_operations/: index.html
settings/noqa/: index.html
settings/pyspark_version/: index.html
settings/select/: index.html
settings/severity/: index.html
settings/show_best_practice/: index.html
settings/show_information/: index.html
settings/warn/: index.html
settings/warning_rules/: index.html
src/: checker.rs  config.rs  lib.rs  line_index.rs  main.rs  noqa.rs  reporter.rs  rule_content.rs  spark_ops.rs  violation.rs  visitor.rs
src/rules/: mod.rs  utils.rs
stylesheets/: extra.css
test_samples/: file_lib.py  test_caching_v2.py  test_csv.py  too_much_medium.py
tests/: test_arr_rules.rs  test_d_rules.rs  test_edge_cases.rs  test_f_rules.rs  test_l_rules.rs  test_p_rules.rs  test_perf_rules.rs  test_s_rules.rs  test_u_rules.rs
tests/common/: mod.rs
versioning/: index.html
(+89 files in other folders)
