[package]
name = "pyspark-antipattern"
version = "0.2.3"
edition = "2024"
description = "PySpark antipattern linter for CI/CD pipelines"
homepage = "https://skanderboudawara.github.io/pyspark-antipattern/"
documentation = "https://skanderboudawara.github.io/pyspark-antipattern/"
repository = "https://github.com/skanderboudawara/pyspark-antipattern"
authors = ["Skander Boudawara <skander.education@proton.me>"]
license = "MIT"

[lib]
name = "pyspark_antipattern"
path = "src/lib.rs"

[[bin]]
name = "pyspark-antipattern"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
rustpython-parser = "0.4"
toml        = "1.1"
serde       = { version = "1", features = ["derive"] }
walkdir     = "2"
termcolor   = "1"
rayon       = "1"
mimalloc    = { version = "0.1", default-features = false }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto       = true
strip     = true
codegen-units = 1
panic     = "abort"
