[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyspark-antipattern"
version = "0.1.4"
description = "PySpark antipattern linter for CI/CD pipelines"
requires-python = ">=3.8"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Skander Boudawara", email = "skander.education@proton.me" }]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database :: Database Engines/Servers",
]

[tool.maturin]
bindings = "bin"


# ---------------------------------------------------------------------------
# Example linter configuration — copy this section into YOUR project's
# pyproject.toml and adjust as needed.
# ---------------------------------------------------------------------------
# [tool.pyspark-antipattern]
# failing_rules = []          # Rules that cause exit code 1 (default: all)
# warning_rules = []          # Rules that only warn (exit code 0)
# ignore_rules  = []          # Rules that are completely silenced (e.g. ["S004"] or ["F"] for all F rules)
# show_best_practice = false
# show_information = false
# distinct_threshold = 5      # S004: flag when distinct() count exceeds this
# explode_threshold = 3       # S008: flag when explode() count exceeds this
# loop_threshold = 10         # L001/L002/L003: flag for-loops where range(N) > threshold;
#                             #   while-loops always assume 99 iterations
