[build-system]
requires = ["maturin>=1.9.3,<2.0"]
build-backend = "maturin"

[project]
name = "pyspark-antipattern"
version = "0.2.3"
description = "PySpark antipattern linter for CI/CD pipelines"
requires-python = ">=3.8"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Skander Boudawara", email = "skander.education@proton.me" }]
license = {text = "MIT"}
keywords = [
    "pyspark",
    "antipattern",
    "linter",
    "automation",
    "flake8",
    "pycodestyle",
    "pyflakes",
    "pylint",
    "ruff",
]
# https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Repository = "https://github.com/skanderboudawara/pyspark-antipattern"
Documentation = "https://skanderboudawara.github.io/pyspark-antipattern/"
Changelog = "https://github.com/skanderboudawara/pyspark-antipattern/releases"


[tool.maturin]
bindings = "bin"


# ---------------------------------------------------------------------------
# Example linter configuration — copy this section into YOUR project's
# pyproject.toml and adjust as needed.
# ---------------------------------------------------------------------------
# [tool.pyspark-antipattern]
# select = []                 # Show only these rules — everything else is silenced (default: all active)
# warn   = []                 # Rules that only warn (exit code 0)
# ignore = []                 # Rules that are completely silenced (e.g. ["S004"] or ["F"] for all F rules)
# show_best_practice = false
# show_information = false
# distinct_threshold = 5      # S004: flag when distinct() count exceeds this
# explode_threshold = 3       # S008: flag when explode() count exceeds this
# loop_threshold = 10         # L001/L002/L003: flag for-loops where range(N) > threshold;
#                             #   while-loops always assume 99 iterations
# exclude_dirs = ["my_generated_code", "vendor"]
# severity = "medium"         # Only report violations with impact >= this level: "low", "medium", or "high"
# pyspark_version = "3.4"     # Cluster PySpark version — silences rules requiring a newer version